# didactic-tensor-compiler

./: CMakeLists.txt  README.md
include/compiler/: autotuner.h  frontend.h  optimizers.h  passes.h
include/core/: ops.h
python/: base.py
src/: autotuner.cpp  metal_exec.cpp  python_binding.cpp  shaders.metal
src/backend/: gpu_exec.cu  metal_exec.cpp
src/bindings/: python_binding.cpp
src/compiler/: autotuner.cpp  frontend.cpp  optimizers.cpp  passes.cpp
src/core/: ops.cpp  types.cpp
